<resources>
    <string name="app_name">SIMO Copia</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="download_notification_channel_id" translatable="false">download_channel</string>
    <string name="empty"> </string>
    <string name="address_simo" formatted="true">Dirección: <u>%s</u></string>
    <string name="pbx_simo" formatted="true">Pbx: <u>%s</u></string>
    <string name="fax_simo" formatted="true">Fax: <u>%s</u></string>
    <string name="telephone_simo" formatted="true">Línea Nacional: <u>%s</u></string>
    <string name="email_simo" formatted="true"><u>%s</u></string>
    <string name="email_simo_juditial" formatted="true">Notificaciones Judiciales: <u>%s</u></string>
    <string name="subtitulo_email_atencion" formatted="true">Correo: <u>%s</u></string>
    <string name="subtitulo_chat" formatted="true">Chat</string>
    <string name="business_hours"><u>Horario de Atención al Ciudadano:\nLunes a viernes de 8:00 a.m. a 5:30 p.m.</u></string>
    <string name="facebook_img_link">Link con imagen para acceder a la CNSC en facebook</string>
    <string name="twitter_img_link">Link con imagen para acceder a la CNSC en twitter</string>
    <string name="youtube_img_link">Link con imagen para acceder a la CNSC en Youtube</string>
    <string name="audience_name_f" formatted="true">Nombre de la audiencia: <u>%s</u></string>
    <string name="S_P_Name" formatted="true">Nombre del Proceso de Selección: <u>%s</u></string>
    <string name="initial_date_f" formatted="true">Fecha de Inicio: <u>%s</u></string>
    <string name="final_date_f" formatted="true">Fecha de Terminación: <u>%s</u></string>
    <string name="title_start_activity">Sistema de Apoyo para la Igualdad, el Mérito y la Oportunidad</string>
    <string name="enter_as_invited"><u>Entrar como Invitado</u></string>
    <string name="title_main">SIMO Mobile</string>
    <string name="search_the_job_of_carrer" formatted="true">Busque el <b>Empleo de Carrera</b> que se ajuste a sus necesidades:</string>
    <string name="register">Registrarse</string>
    <string name="cedula_in_alert_dialog">Número de Cédula:</string>
    <string name="validate_document_id_user">Verificar mi Identidad</string>
    <string name="register_yourself">Regístrese</string>
    <string name="registered">¡Registro exitoso!</string>
    <string name="login">Ingresar</string>
    <string name="title_activity_login">Ingresar SIMO</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="email">Correo electrónico:</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="password">Contraseña</string>
    <string name="err_email">Correo electrónico no válido</string>
    <string name="empty_field">Campo vacío</string>
    <string name="empty_multi">Diligencie el campo / No use la tecla ENTER</string>
    <string name="register_simo">Registro SIMO</string>
    <string name="my_alerts">Alertas / Citaciones</string>
    <string name="my_convocatories">Procesos de Selección Vigentes</string>
    <string name="my_payments">Pagos Realizados</string>
    <string name="my_jobs">Mis Trabajos</string>
    <string name="place">Lugar</string>
    <string name="list_opec">Listado OPEC</string>
    <string name="legal_advice">Términos del Servicio</string>
    <string name="pse_process_title">Proceso de Pago PSE</string>
    <string name="change_password">Cambiar Contraseña</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="are_you_sure_exit">¿Está seguro que desea salir?</string>
    <string name="home_menu_title"><u>Inicio</u></string>
    <string name="convocatory_menu_title"><u>Procesos de Selección</u></string>
    <string name="my_employments_menu_title"><u>Mis Empleos</u></string>
    <string name="alerts_menu_title"><u>Alertas</u></string>
    <string name="my_payments_menu_title"><u>Pagos Realizados</u></string>
    <string name="my_Audiencias_menu_title">Audiencias</string>
    <string name="an_error_has_ocurred">Un error ha ocurrido</string>
    <string name="number_vacancy">Vacantes: %d</string>
    <string name="close_inscription">Cierre de Inscripciones: %s</string>
    <string name="convocatory_underline"><u>%s</u></string>
    <string name="employ_detail">Detalle del Empleo</string>
    <string name="number_offers_founded">Procesos de selección encontrados: %d</string>
    <string name="detail_convocatory">Detalle del Proceso de Selección</string>
    <string name="en_the_cnsc_we_are_interested">¡En la CNSC nos interesa\nescucharle!</string>
    <string name="select_the_option">Seleccione la opción adecuada:</string>
    <string name="found_error_in_app">Encontré un error en la app</string>
    <string name="i_would_like_app">Me gustaría que en la app...</string>
    <string name="other">Otro</string>
    <string name="comision_nacional_servicio">Comisión Nacional del Servicio Civil - CNSC</string>
    <string name="charge_1">Cargo_1</string>
    <string name="number_opec">Número OPEC:</string>
    <string name="level_hint">Tipo de Formación:</string>
    <string name="level_hint2">Nivel:</string>
    <string name="level">Tipo de Formación:</string>
    <string name="grade">Grado:</string>
    <string name="asignation_salarial">Asignación Salarial:</string>
    <string name="purpose">Propósito</string>
    <string name="functons">Funciones</string>
    <string name="requirements">Requisitos</string>
    <string name="study">Estudio:</string>
    <string name="vacancy">Total Vacantes:</string>
    <string name="experience">Experiencia:</string>
    <string name="vacancies">Total Vacantes:</string>
    <string name="total_vacancies_city_s">Total vacantes:</string>
    <string name="total_vacancies_s">Total de vacantes de éste empleo:</string>
    <string name="prov_prep_s">Vacantes provistas por prepensionados:</string>
    <string name="prov_prep_de_s">de:</string>
    <string name="liberation_date_s">Fechas de liberación</string>
    <string name="total_prep1_s">de las cuales </string>
    <string name="total_prep2_s">están ocupadas por prepensionados</string>
    <string name="close_of_inscriptions">Cierre de Inscripciones:</string>
    <string name="advanced_search">Búsqueda Avanzada</string>
    <string name="adress_actualization">Actualice su dirección de residencia</string>
    <string name="convocatory_">Proceso de Selección:</string>
    <string name="entity_">Entidad:</string>
    <string name="key_word">Palabra Clave:</string>
    <string name="loremp_ipsum_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</string>
    <string name="enitity">Entidad:</string>
    <string name="department">Departamento:</string>
    <string name="city">Municipio:</string>
    <string name="convocatory">Proceso de Selección:</string>
    <string name="salarial_range">Rango Salarial</string>
    <string name="lower_limit_s">Vr. Mínimo del Rango Salarial:</string>
    <string name="upper_limit_s">Vr. Máximo del Rango Salarial:</string>
    <string name="number_job_opec">Número Empleo (OPEC):</string>
    <string name="search_job">Buscar Empleo</string>
    <string name="search_job___">Buscar Empleo...</string>
    <string name="user">Usuario:</string>
    <string name="c_dula">Número de Identificación:</string>
    <string name="i_wish_to_give_notifications">Deseo recibir notificaciones de la CNSC</string>
    <string name="continuee">Continuar</string>
    <string name="at_continue_acept_terms" formatted="true">Al continuar, acepto los <u>Términos del servicio</u></string>
    <string name="y_la_u_pol_tica_de_privacidad_u_de_la_cnsc" formatted="true">y la <u>Política de privacidad</u> de la CNSC</string>
    <string name="enter_the_next_data">Ingrese los siguientes datos:</string>
    <string name="names">Nombres:</string>
    <string name="surnames">Apellidos:</string>
    <string name="and_email_has_been_sent">¡Un código de seguridad ha sido enviado al e-mail registrado! Cópielo y péguelo en el siguiente campo:</string>
    <string name="enter_the_code_here">Ingrese el código aquí</string>
    <string name="verify">Verificar</string>
    <string name="did_not_you_received_the_code">¿No recibió el código?</string>
    <string name="resend_code">Reenviar código</string>
    <string name="verify_code">Verificar código</string>
    <string name="your_account_en_simo">Su cuenta ha sido creada\nA continuación ingrese la contraseña que ha registrado para ingresar...</string>
    <string name="norm_number">Número de la Norma:</string>
    <string name="date_two">Fecha:</string>
    <string name="description_two">Descripción:</string>
    <string name="see_norm_attachment">Descargar detalle de la Norma</string>
    <string name="not_avaible">No disponible</string>
    <string name="educational_Type">Tipo de Formación:</string>
    <string name="educational_level_">Nivel educativo:</string>
    <string name="identifier_number_">Número identificador:</string>
    <string name="periodicity_">Periodicidad:</string>
    <string name="reached_level_">Nivel Alcanzado:</string>
    <string name="institution_">Institución:</string>
    <string name="program_">Programa:</string>
    <string name="type_product_">Tipo de Producto:</string>
    <string name="bibliographic_citation_">Cita Bibliográfica:</string>
    <string name="transaction_status_">Estado de la Transacción:</string>
    <string name="date_payment_">Fecha de Pago:</string>
    <string name="type_payment_">Medio de Pago:</string>
    <string name="bank_">Banco:</string>
    <string name="payment_reference_">Referencia de Pago:</string>
    <string name="track_code_">Código de Trazabilidad:</string>
    <string name="payment_value_debited">Valor del Pago:</string>
    <string name="test_">Prueba:</string>
    <string name="result_">Resultado parcial:</string>
    <string name="score_aproval_">Puntaje aprobatorio:</string>
    <string name="ponderation_">Ponderación:</string>
    <string name="date_last_update">Fecha última actualización:</string>
    <string name="number_complaint_">Número de Reclamación:</string>
    <string name="date_register_">Fecha de Registro:</string>
    <string name="type_complaint_s">Tipo:</string>
    <string name="subject_">Asunto:</string>
    <string name="detail_complaint_s">Detalle:</string>
    <string name="status_">Estado:</string>
    <string name="see_complaints">Ver reclamaciones</string>
    <string name="graduated_">Graduado:</string>
    <string name="date_grade_">Fecha de Terminación:</string>
    <string name="download">Descargar soporte</string>
    <string name="user_guide">Manual de Usuario</string>
    <string name="the_process">El Proceso</string>
    <string name="contact">Contacto</string>
    <string name="tutorial">Tutorial</string>
    <string name="terms_of_service">Términos del servicio</string>
    <string name="help_us_to_improve">Ayúdenos a mejorar</string>
    <string name="rate_us">Califíquenos</string>
    <string name="delete_search_history">Borrar historial de búsquedas</string>
    <string name="change_pasword">Cambiar clave</string>
    <string name="close_session">Cerrar sesión</string>
    <string name="simo_mobile_2">SIMO Mobile v2.0</string>
    <string name="image_payment_status">Imagen Pago realizado</string>
</resources>