<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        style="@style/CardViewBase"
        app:cardBackgroundColor="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <co.gov.cnsc.mobile.simo.views.RowLabelValue
                android:id="@+id/rowEducationalLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                app:textLabel="@string/educational_level_"
                app:textLabelSize="16sp"
                app:textValueSize="16sp" />

            <co.gov.cnsc.mobile.simo.views.RowLabelValue
                android:id="@+id/rowEducationalType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                app:textLabel="@string/educational_Type"
                app:textLabelSize="16sp"
                app:textValueSize="16sp" />

            <co.gov.cnsc.mobile.simo.views.RowLabelValue
                android:id="@+id/rowInstitution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                app:textLabel="@string/institution_"
                app:textLabelSize="16sp"
                app:textValueSize="16sp" />

            <co.gov.cnsc.mobile.simo.views.RowLabelValue
                android:id="@+id/rowProgram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                app:textLabel="@string/program_"
                app:textLabelSize="16sp"
                app:textValueSize="16sp" />

            <co.gov.cnsc.mobile.simo.views.RowLabelValue
                android:id="@+id/rowPerdiodicity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                app:textLabel="@string/periodicity_"
                app:textLabelSize="16sp"
                app:textValueSize="16sp" />

            <co.gov.cnsc.mobile.simo.views.RowLabelValue
                android:id="@+id/rowReachLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                app:textLabel="@string/reached_level_"
                app:textLabelSize="16sp"
                app:textValueSize="16sp" />

            <co.gov.cnsc.mobile.simo.views.RowLabelValue
                android:id="@+id/rowGraduated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                app:textLabel="@string/graduated_"
                app:textLabelSize="16sp"
                app:textValueSize="16sp" />

            <co.gov.cnsc.mobile.simo.views.RowLabelValue
                android:id="@+id/rowDateGrade"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textColor="#000000"
                app:textLabel="@string/date_grade_"
                app:textLabelSize="16sp"
                app:textValueSize="16sp" />

            <co.gov.cnsc.mobile.simo.views.RowLabelValue
                android:id="@+id/rowDownloadLink"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#F1F1EC"
                app:drawableIcon="@drawable/icons8_downloading_updates_48"
                android:textColor="#000000"
                app:textLabel="@string/download" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>