<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        style="@style/CardViewBase"
        app:cardBackgroundColor="#FFFFFF">

        <LinearLayout
            android:id="@+id/linearData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <co.gov.cnsc.mobile.simo.views.RowLabelValue
                android:id="@+id/rowTest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:drawableIcon="@drawable/ic_twotone_chrome_reader_mode_24px"
                android:textColor="#000000"
                app:textLabel="@string/test_" />

            <co.gov.cnsc.mobile.simo.views.RowLabelValue
                android:id="@+id/rowScoreAproval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                app:textLabel="@string/score_aproval_" />

            <co.gov.cnsc.mobile.simo.views.RowLabelValue
                android:id="@+id/rowCalification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                app:textLabel="@string/result_" />

            <co.gov.cnsc.mobile.simo.views.RowLabelValue
                android:id="@+id/rowPonderation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:visibility="gone"
                app:textLabel="@string/ponderation_" />

            <co.gov.cnsc.mobile.simo.views.RowLabelValue
                android:id="@+id/rowDateLastUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:visibility="gone"
                app:textLabel="@string/date_last_update" />

            <co.gov.cnsc.mobile.simo.views.RowLabelValue
                android:id="@+id/rowLinkComplaints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:background="#E0F7FA"
                android:textColor="#000000"
                app:textLabel="@string/see_complaints" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>