<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        style="@style/CardViewBase"
        app:cardBackgroundColor="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <co.gov.cnsc.mobile.simo.views.RowLabelValue
                android:id="@+id/rowNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                app:textLabel="@string/norm_number"
                app:textLabelSize="14sp" />

            <co.gov.cnsc.mobile.simo.views.RowLabelValue
                android:id="@+id/rowDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:textLabel="@string/date_two"
                app:textLabelSize="14sp"
                android:textColor="#000000"
                app:textValue="@string/not_avaible" />

            <co.gov.cnsc.mobile.simo.views.RowLabelValue
                android:id="@+id/rowDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                app:textLabel="@string/description_two"
                app:textLabelSize="14sp" />

            <co.gov.cnsc.mobile.simo.views.RowLabelValue
                android:id="@+id/rowAttachment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:drawableIcon="@drawable/ic_attach_file_24dp"
                android:textColor="#000000"
                app:textLabel="@string/see_norm_attachment"
                app:textLabelSize="14sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>