<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        style="@style/CardViewBase"
        app:cardBackgroundColor="#FFFFFF">

        <LinearLayout
            android:id="@+id/linearData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <co.gov.cnsc.mobile.simo.views.RowLabelValue
                android:id="@+id/rowNumberComplaint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                app:textLabel="@string/number_complaint_" />

            <co.gov.cnsc.mobile.simo.views.RowLabelValue
                android:id="@+id/rowDateRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                app:textLabel="@string/date_register_" />

            <co.gov.cnsc.mobile.simo.views.RowLabelValue
                android:id="@+id/rowComplaintType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                app:textLabel="@string/type_complaint_s" />

            <co.gov.cnsc.mobile.simo.views.RowLabelValue
                android:id="@+id/rowSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                app:textLabel="@string/subject_" />

            <co.gov.cnsc.mobile.simo.views.RowLabelValue
                android:id="@+id/rowDetailComplaint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                app:textLabel="@string/detail_complaint_s" />

            <co.gov.cnsc.mobile.simo.views.RowLabelValue
                android:id="@+id/rowStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                app:textLabel="@string/status_" />

            <!--<co.gov.cnsc.mobile.simo.views.RowLabelValue
                android:id="@+id/rowAttachment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                app:textLabel="@string/see_response_s" />-->
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>