<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        style="@style/CardViewBase"
        app:cardBackgroundColor="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <co.gov.cnsc.mobile.simo.views.RowLabelValue
                android:id="@+id/rowTypeProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                app:textLabel="@string/type_product_"
                app:textLabelSize="16sp"
                app:textValueSize="16sp" />

            <co.gov.cnsc.mobile.simo.views.RowLabelValue
                android:id="@+id/rowIdentifierNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                app:textLabel="@string/identifier_number_"
                app:textLabelSize="16sp"
                app:textValueSize="16sp" />

            <co.gov.cnsc.mobile.simo.views.RowLabelValue
                android:id="@+id/rowBibliograficCitation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:textColor="#000000"
                app:textLabel="@string/bibliographic_citation_"
                app:textLabelSize="16sp"
                app:textValueSize="16sp" />

            <co.gov.cnsc.mobile.simo.views.RowLabelValue
                android:id="@+id/rowDownloadLink"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#F1F1EC"
                app:drawableIcon="@drawable/icons8_downloading_updates_48"
                android:textColor="#000000"
                app:textLabel="@string/download" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>